why choose updated

--- a/cmausa.html
+++ b/cmausa.html
@@ -167,26 +167,24 @@
                 <h3 class="text-theme-colored">CMA USA</h3>
                 <h5>
                   <em><span class="text-theme-color-2">Dear Aspirant,</span>
-                    <br /><span class="text-theme-color-2">This 8 to 12-month program
+                    <br />CMA, a prestigious global certification by the <span class="text-theme-color-2">Institute of
+                      Management Accountants (IMA),
                     </span>
-                    is the pinnacle of excellence in the fields of accounting,
-                    finance, and management. With over 150,000 members across
-                    148+ countries, CMA
-                    <span class="text-theme-color-2">USA certification opens doors to a world of global
-                      oppor tunities
+                    signifies expertise in Finance and Management Accounting. At Prospire, we elevate your proficiency
+                    beyond traditional methods. Our program sharpens
+                    <span class="text-theme-color-2">strategic thinking and decision-making skills, immersing you in
+                      topics like Capital Budgeting and Corporate Finance through innovative learning approaches.
                     </span>
-                    making it your passport to success on an interna tional
-                    stage.
                   </em>
                 </h5>
-                <p>
+                <!-- <p>
                   Prospire recommends this certification, recognizing its significance in shaping successful careers.
                   CMA profe ssionals, endorsed by Prospire, stand out for their tech nical expertise and
                   business-oriented approach. Join Prospire to unlock benefits like improved earning pote ntial and job
                   security, positioning yourself for success in diverse global opportunities. With a well-regarded re
                   putation, CMA USA certification sets you apart in the competitive job market, especially in Kerala and
                   major Indian cities, offering high-profile roles in management and financial accounting."
-                </p>
+                </p> -->
                 <br /><br />
                 <img src="images/mainimages/CMA_USA_TREE.jpg" alt="image_not_found" />
                 <br /><br /><br />
