--- a/index.html
+++ b/index.html
@@ -520,15 +520,14 @@
               <div class="col-sm-12 col-md-6 mb-sm-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                 <h3 class="text-uppercase mt-0">Prospire<span class="text-theme-color-2"> Empowering Accounting
                     Careers</span></h3>
-                <p class="lead">Unlock success with Prospire—a premier institution guiding accounting careers. Expert
-                  instructors, industry partnerships, and personalized support define our commitment to your success.
-                </p>
-                <p class="mb-15">Prospire Institution is a beacon of excellence in accounting education, empowering
-                  students for success. Our commitment is evident in tailored programs, top-notch tutors, and a
-                  collaborative approach with industry leaders. </p>
-                <p class="mb-10">We prioritize not just technical expertise but also vital soft skills, ensuring a
-                  holistic professional development journey. Join Prospire Institution—a dedicated partner in your
-                  accounting success.</p>
+                <p class="lead">Prospire Education is dedicated to transforming the accounting industry, addressing the
+                  shortage of skilled professionals.</p>
+                <p class="mb-15">Our robust ecosystem for EAs & CMAs revolutionizes the path to becoming qualified
+                  accountants, bridging the global skills gap. We showcase exceptional Indian talent globally,
+                  advocating for job opportunities to be brought to India, positively impacting the economy. Pioneering
+                  pathways for Indian accountants to pursue international roles.</p>
+                <p class="mb-10">Get up, join us create a legacy, unlock the full potential of accounting talent,
+                  revolutionize the industry, and boost the possibilities open to accountants all over worldwide.</p>
                 <a class="btn btn-colored btn-theme-colored btn-lg text-uppercase font-13 mt-0" href="about.html">More
                   About Us</a>
               </div>
@@ -810,44 +809,44 @@
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box p-15 mb-0 mb-sm-0 mt-sm-0">
                       <a class="icon pull-left sm-pull-none flip" href="#">
-                        <i class="fa fa-graduation-cap text-theme-colored font-50"></i>
+                        <i class="fa fa-desktop text-theme-colored font-50"></i>
                       </a>
                       <div class="ml-70 ml-sm-0">
-                        <h4 class="icon-box-title mt-15 mb-5">Quality Education</h4>
-                        <p>we delivers top-tier, practical education with a focus on real-world relevance.</p>
+                        <h4 class="icon-box-title mt-15 mb-5">Technology-Aided Teaching</h4>
+                        <p>Modernized education using advanced tools for optimal learning outcomes.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="icon-box p-15 mb-0 mb-sm-0 mt-sm-0">
                       <a class="icon pull-left sm-pull-none flip" href="#">
-                        <i class="fa fa-users text-theme-colored font-50"></i>
+                        <i class="fa fa-flask text-theme-colored font-50"></i>
                       </a>
                       <div class="ml-70 ml-sm-0">
-                        <h4 class="icon-box-title mt-15 mb-5">Expert Instructors</h4>
-                        <p>Learn from industry leaders, gaining insights crucial for success.</p>
+                        <h4 class="icon-box-title mt-15 mb-5">Classroom-Integrated LAB Facility</h4>
+                        <p>Hands-on training within classrooms for immersive learning experiences.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-6 col-md-6">
-                    <div class="icon-box p-15 mb-30 mb-sm-0 mt-sm-0">
+                    <div class="icon-box p-15 mb-0 mb-sm-0 mt-sm-0">
                       <a class="icon pull-left sm-pull-none flip" href="#">
-                        <i class="fa fa-book text-theme-colored font-50"></i>
+                        <i class="fa fa-check-circle text-theme-colored font-50"></i>
                       </a>
                       <div class="ml-70 ml-sm-0">
-                        <h4 class="icon-box-title mt-15 mb-5">Personalized Guidance</h4>
-                        <p>Benefit from dedicated tutors and advanced tracking for tailored support.</p>
+                        <h4 class="icon-box-title mt-15 mb-5">100% Placement & Pass Assurance</h4>
+                        <p>Guaranteed career placement and academic success for students.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-6 col-md-6">
-                    <div class="icon-box p-15 mb-30 mb-sm-0 mt-sm-0">
+                    <div class="icon-box p-15 mb-0 mb-sm-0 mt-sm-0">
                       <a class="icon pull-left sm-pull-none flip" href="#">
-                        <i class="fa fa-thumbs-o-up faa-vertical text-theme-colored font-50"></i>
+                        <i class="fa fa-industry text-theme-colored font-50"></i>
                       </a>
                       <div class="ml-70 ml-sm-0">
-                        <h4 class="icon-box-title mt-15 mb-5">Career Preparation</h4>
-                        <p>Prospire: Expertise and soft skills for your competitive career edge.</p>
+                        <h4 class="icon-box-title mt-15 mb-5">Industrial Visit Projects</h4>
+                        <p>Real-world industry exposure through project-based visits for practical skills.</p>
                       </div>
                     </div>
                   </div>
