social media link

--- a/course.html
+++ b/course.html
@@ -349,12 +349,12 @@
             <div class="widget dark">
               <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
               <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
+                <li><a href="https://www.youtube.com/@Prospireeducation"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i class="fa fa-instagram"></i></a></li>
+                <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
               </ul>
             </div>
 
@@ -381,12 +381,12 @@
             <div class="widget dark">
               <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
               <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
+                <li><a href="https://www.youtube.com/@Prospireeducation"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i class="fa fa-instagram"></i></a></li>
+                <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
               </ul>
             </div>
 
