--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution" />
-  <meta name="keywords" content="academy, course, education, education, cma, learning," />
+  <meta name="keywords" content="ACCA, course, education, education, cma, learning," />
 
   <!-- Page Title -->
   <title>prospire | Education & Institution</title>
