some new keywords added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution" />
-  <meta name="keywords" content="ACCA, college, education, education, cma, learning,EA course" />
+  <meta name="keywords" content="best cma college in kannur ,cma course details,cma usa course details,cma course duration,accounting course,business education,free training,education classes,career courses,education courses
+  business courses,CMA India course,CMA college in Kannur,ACCA course in Kannur, college,fee, education, education, cma,acca, learning,EA course,kerala,Kannur, near me" />
 
   <!-- Page Title -->
   <title>prospire | Education & Institution</title>
