G search console tag added

--- a/cmausa.html
+++ b/cmausa.html
@@ -9,6 +9,7 @@
   <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
 
+  <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
   <!-- Page Title -->
   <title>prospire | Education & Institution</title>
 
