--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <meta name="keywords" content="best cma college in kannur ,cma course details,cma usa course details,cma course duration,accounting course,business education,free training,education classes,career courses,education courses
   business courses,CMA India course,CMA college in Kannur,ACCA course in Kannur, college,fee, education, education, cma,acca, learning,EA course,kerala,Kannur, near me" />
 
+  <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
   <!-- Page Title -->
   <title>prospire | Education & Institution</title>
+
 
   <!-- Favicon and Touch Icons -->
   <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
