--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
   <meta name="robots" content="noindex, nofollow">
 
+  <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
   <title>prospire | Education & Institution</title>
 
   <link href="images/favicon.png" rel="shortcut icon" type="image/png">
