--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="content-type" content="application/xml; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
 
@@ -464,7 +464,7 @@
 
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="content-type" content="application/xml; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
 
