broken link fixed

--- a/cmausa.html
+++ b/cmausa.html
@@ -523,7 +523,7 @@
                     href="#">+91 9633213660</a> </li>
 
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="info@prospireeducation.in">info@prospireeducation.in</a> </li>
+                    class="text-gray" href="mailto:info@prospireeducation.in">info@prospireeducation.in</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
                     href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
@@ -554,7 +554,7 @@
                     href="#">+91 8891095660</a> </li>
 
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="info@prospireeducation.in"> info@prospireeducation.in</a> </li>
+                    class="text-gray" href="mailto:info@prospireeducation.in"> info@prospireeducation.in</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
                     href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
