--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
   <!-- Page Title -->
-  <title>prospire | Education & Institution</title>
+  <title>prospire Education & Institution</title>
 
 
   <!-- Favicon and Touch Icons -->
