broken links and clinet id will be setted

--- a/contact.html
+++ b/contact.html
@@ -440,7 +440,7 @@
         var booking_service = document.getElementById("booking_service").value;
         var phone = document.getElementById("phone").value;
         var message = document.getElementById("message").value;
-        var client_id = "wexoeai"; // Replace with your user ID
+        var client_id = "wc_wFweJldKH9riCsIn3wcg"; // Replace with your user ID
         msg_data = "booking_service: " + booking_service + "\nphone: " + phone
         console.log(msg_data);
         var payload = {
