--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="application/xml; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution | Looking to excel in accounting? Explore our website for professional courses in CMA, ACCA, and EA | Best CMA College in kannur" />
-  <meta name="keywords" content="best cma college in kannur ,cma course details,cma usa course details,cma course duration,accounting course,business education,free training,education classes,career courses,education courses
-  business courses,CMA India course,CMA college in Kannur,ACCA course in Kannur, college,fee, education, education, cma,acca, learning,EA course,kerala,Kannur, near me" />
+  <meta name="keywords" content="Prospire education, Best EA campus in Kannur, North Kerala, cma college in kannur, cma course details, cma usa course details, cma course duration, accounting course, business education, free training, education classes, career courses, education courses
+  business courses, CMA India course, CMA college in Kannur, ACCA course in Kannur, college, fee, education, education, cma,acca, learning, EA course, kerala, Kannur, near me" />
 
   <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
   <!-- Page Title -->
