open graph meta tags added in all pages

--- a/course.html
+++ b/course.html
@@ -12,6 +12,10 @@
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
 
   <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
+  <meta property="og:title" content="prospire education">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://example.com/image.jpg">
+  <meta property="og:url" content="https://prospireeducation.in/course.html">
   <!-- Page Title -->
   <title>prospire | Education & Institution</title>
 
