--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,10 @@
   <meta name="robots" content="noindex, nofollow">
 
   <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
+  <meta property="og:title" content="prospire education">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://example.com/image.jpg">
+  <meta property="og:url" content="https://example.com/page">
   <title>prospire | Education & Institution</title>
 
   <link href="images/favicon.png" rel="shortcut icon" type="image/png">
