--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="application/xml; charset=UTF-8" />
-  <meta name="description" content="prospire | Education & Institution | Looking to excel in accounting? Explore the professional courses in CMA, ACCA, and EA | Best CMA College in kannur" />
-  <meta name="keywords" content="Prospire education, Best EA campus in Kannur, North Kerala, cma college in kannur, cma course details, cma usa course details, cma course duration, accounting course, business education, free training, education classes, career courses, education courses
+  <meta name="description"
+    content="prospire | Education & Institution | Looking to excel in accounting? Explore the professional courses in CMA, ACCA, and EA | Best CMA College in kannur" />
+  <meta name="keywords"
+    content="Prospire education, Best EA campus in Kannur, North Kerala, cma college in kannur, cma course details, cma usa course details, cma course duration, accounting course, business education, free training, education classes, career courses, education courses
   business courses, CMA India course, CMA college in Kannur, ACCA course in Kannur, college, fee, education, education, cma,acca, learning, EA course, kerala, Kannur, near me" />
 
   <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
+  <meta property="og:title" content="prospire education">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://example.com/image.jpg">
+  <meta property="og:url" content="https://prospireeducation.in">
   <!-- Page Title -->
   <title>prospire Education & Institution</title>
 
@@ -1164,7 +1170,8 @@
               <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
               <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
                 <li><a href="https://www.youtube.com/@Prospireeducation"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i
+                      class="fa fa-instagram"></i></a></li>
                 <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -1196,7 +1203,8 @@
               <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
               <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
                 <li><a href="https://www.youtube.com/@Prospireeducation"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i
+                      class="fa fa-instagram"></i></a></li>
                 <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
