canonical tags added in all pages

--- a/course.html
+++ b/course.html
@@ -20,6 +20,7 @@
   <title>prospire | Education & Institution</title>
 
   <!-- Favicon and Touch Icons -->
+  <link rel="canonical" href="https://prospireeducation.in/course.html">
   <link href="images/favicon.png" rel="shortcut icon" type="image/png">
   <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
