--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
   <!-- Favicon and Touch Icons -->
+  <link rel="canonical" href="https://www.prospireeducation.in">
   <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
   <link href="images/apple-touch-icon.png" rel="apple-touch-icon" />
   <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
