--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
-
+                <li>
+                  <a href="blog.html">Blog</a>
+                </li>
                 <li>
                   <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
