commen changes in bloge pages

--- a/course.html
+++ b/course.html
@@ -115,9 +115,13 @@
                 <li>
                   <a href="about.html">About</a>
                 </li>
+                <li>
+                  <a href="blog.html">Blog</a>
+                </li>
 
                 <li>
-                  <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
+                  <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored"
+                    style="background-color: #e44178; color: white; margin-left: 10px;">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
                 </li>
               </ul>
@@ -399,8 +403,9 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="course.html">Courses</a></li>
-
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
+
               </ul>
             </div>
           </div>
