--- a/blog8.html
+++ b/blog8.html
@@ -143,8 +143,7 @@
                     <div class="entry-meta media no-bg no-border mt-15 pb-20">
                       <div class="entry-date media-left text-center flip bg-theme-colored pt-5 pr-15 pb-5 pl-15">
                         <ul>
-                          <li class="font-16 text-white font-weight-600">28</li>
-                          <li class="font-12 text-white text-uppercase">Feb</li>
+                          <span class="text-white font-30"><i class="fa fa-commenting-o text-white"></i></span>
                         </ul>
                       </div>
                       <div class="media-body pl-15">
@@ -153,9 +152,9 @@
                               href="blog-single-right-sidebar.html">Exploring the Vast Scope of Studying the ACCA IFRS
                               Course</a></h3>
                           <span class="mb-10 text-gray-darkgray mr-10 font-13"><i
-                              class="fa fa-commenting-o mr-5 text-theme-colored"></i> 214 Comments</span>
+                              class="fa fa-commenting-o mr-5 text-theme-colored"></i></span>
                           <span class="mb-10 text-gray-darkgray mr-10 font-13"><i
-                              class="fa fa-heart-o mr-5 text-theme-colored"></i> 895 Likes</span>
+                              class="fa fa-heart-o mr-5 text-theme-colored"></i></span>
                         </div>
                       </div>
                     </div>
@@ -431,14 +430,14 @@
                 </div>
                 <div class="widget">
                   <div class="widget-image-carousel">
-                    <a href="3" class="item">
+                    <a href="./blog3.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
                       <h4 class="title">Is the CMA certification still valuable in today's job market? </h4>
                       <p>the CMA certification is still valuable today. It showcases expertise, commitment to learning,
                         and can lead to higher salaries, career advancement, and international opportunities in
                         management accounting and finance.....</p>
                     </a>
-                    <a href="7" class="item">
+                    <a href="./blog7.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
                       <h4 class="title">What Makes Understanding ACCA and IFRS Vital in Today's Finance Industry?</h4>
                       <p>Importance of ACCA IFRS proficiency ensures global financial reporting consistency,
