--- a/blog4.html
+++ b/blog4.html
@@ -4,44 +4,47 @@
 <!-- blog-single-disqus-comments19:08-->
 
 <head>
-
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <meta name="description" content="LearnPress | Education & Courses HTML Template" />
-  <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
-
+  <meta name="description" content="prospire | Education & Institution" />
+  <meta name="keywords" content="academy, course, education, education, cma, learning," />
 
   <!-- Page Title -->
-  <title>LearnPress | Education & Courses HTML Template</title>
+  <title>prospire | Education & Institution</title>
 
   <!-- Favicon and Touch Icons -->
-  <link href="images/favicon.png" rel="shortcut icon" type="image/png">
-  <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
-  <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-  <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
-  <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
+  <link href="images/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
+  <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
+  <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
 
   <!-- Stylesheet -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css">
-  <link href="css/animate.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+  <link href="css/animate.css" rel="stylesheet" type="text/css" />
   <link href="css/css-plugin-collections.css" rel="stylesheet" />
   <!-- CSS | menuzord megamenu skins -->
   <link id="menuzord-menu-skins" href="css/menuzord-skins/menuzord-rounded-boxed.css" rel="stylesheet" />
   <!-- CSS | Main style file -->
-  <link href="css/style-main.css" rel="stylesheet" type="text/css">
+  <link href="css/style-main.css" rel="stylesheet" type="text/css" />
   <!-- CSS | Preloader Styles -->
-  <link href="css/preloader.css" rel="stylesheet" type="text/css">
+  <link href="css/preloader.css" rel="stylesheet" type="text/css" />
   <!-- CSS | Custom Margin Padding Collection -->
-  <link href="css/custom-bootstrap-margin-padding.css" rel="stylesheet" type="text/css">
+  <link href="css/custom-bootstrap-margin-padding.css" rel="stylesheet" type="text/css" />
   <!-- CSS | Responsive media queries -->
-  <link href="css/responsive.css" rel="stylesheet" type="text/css">
+  <link href="css/responsive.css" rel="stylesheet" type="text/css" />
   <!-- CSS | Style css. This is the file where you can place your own custom css code. Just uncomment it and use it. -->
   <!-- <link href="css/style.css" rel="stylesheet" type="text/css"> -->
 
+  <!-- Revolution Slider 5.x CSS settings -->
+  <link href="js/revolution-slider/css/settings.css" rel="stylesheet" type="text/css" />
+  <link href="js/revolution-slider/css/layers.css" rel="stylesheet" type="text/css" />
+  <link href="js/revolution-slider/css/navigation.css" rel="stylesheet" type="text/css" />
+
   <!-- CSS | Theme Color -->
-  <link href="css/colors/theme-skin-color-set-1.css" rel="stylesheet" type="text/css">
+  <link href="css/colors/theme-skin-color-set-1.css" rel="stylesheet" type="text/css" />
 
   <!-- external javascripts -->
   <script src="js/jquery-2.2.4.min.js"></script>
@@ -50,12 +53,16 @@
   <!-- JS | jquery plugin collection for this theme -->
   <script src="js/jquery-plugin-collection.js"></script>
 
+  <!-- Revolution Slider 5.x SCRIPTS -->
+  <script src="js/revolution-slider/js/jquery.themepunch.tools.min.js"></script>
+  <script src="js/revolution-slider/js/jquery.themepunch.revolution.min.js"></script>
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body class="">
@@ -366,14 +373,14 @@
                 </div>
                 <div class="widget">
                   <div class="widget-image-carousel">
-                    <a class="item" href="./blog1.html">
+                    <!-- <a class="item" href="./blog1.html">
                       <img src="https://placehold.it/365x230" alt="noimage">
                       <h4 class="title">opportunities awaiting budding accountants in India !</h4>
                       <p>
                         In India, budding accountants find diverse opportunities in traditional roles, corporate
                         finance, technology-driven sectors, entrepreneurship, global markets, and specialized areas like
                         forensic accounting and sustainability.....</p>
-                    </a>
+                    </a> -->
                     <a href="./blog2.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
                       <h4 class="title">How does holding a CMA certification impact your sense of professional
