side bloge changed

--- a/blog2.html
+++ b/blog2.html
@@ -417,14 +417,13 @@
                         finance, technology-driven sectors, entrepreneurship, global markets, and specialized areas like
                         forensic accounting and sustainability.....</p>
                     </a> -->
-                    <a href="./blog2.html" class="item">
+                    <a href="./blog4.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
-                      <h4 class="title">How does holding a CMA certification impact your sense of professional
-                        fulfillment and financial security? !</h4>
-                      <p>
-                        Career opportunities and salary for CMA holders in India and the USA are promising. CMAs enjoy
-                        lucrative positions in management accounting, with competitive salaries reflecting their
-                        expertise and credentials.....</p>
+                      <h4 class="title">Scope Of Enrolled Agent (EA) !</h4>
+                      <p>Enrolled Agents (EAs) possess extensive expertise in tax representation and consultation,
+                        authorized to represent taxpayers before the IRS. With in-depth knowledge of tax laws, EAs
+                        provide comprehensive tax planning and resolution services, ensuring clients' financial
+                        well-being.....</p>
                     </a>
                     <!-- <a href="./blog3.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
