--- a/blog5.html
+++ b/blog5.html
@@ -157,7 +157,7 @@
                       <div class="media-body pl-15">
                         <div class="event-content pull-left flip">
                           <h3 class="entry-title text-white text-uppercase pt-0 mt-0"><a
-                              href="blog-single-right-sidebar.html">Unveiling Lucrative Career Pathways with a Business
+                              href="blog-single-right-sidebar.html">Unveiling Rewarding Career Pathways with a Business
                               Accounting Technician Course</a></h3>
                           <span class="mb-10 text-gray-darkgray mr-10 font-13"><i
                               class="fa fa-commenting-o mr-5 text-theme-colored"></i></span>
@@ -435,14 +435,6 @@
                 </div>
                 <div class="widget">
                   <div class="widget-image-carousel">
-
-                    <a href="./blog5.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
-                      <h4 class="title">Why is the BAT course considered a vital pathway for individuals aspiring to
-                        enter the finance industry? </h4>
-                      <p>The BAT course equips students with foundational knowledge, practical skills, and opportunities
-                        for career advancement, preparing them for diverse roles in accounting and finance.....</p>
-                    </a>
                     <a href="./blog6.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
                       <h4 class="title">Empowering Careers in Finance </h4>
