--- a/blog8.html
+++ b/blog8.html
@@ -181,7 +181,7 @@
                       individuals
                       not only enhance their technical expertise but also gain credibility and validation from an
                       internationally
-                      renowned accreditation body, opening doors to lucrative career opportunities on a global scale.
+                      renowned accreditation body, opening doors to Rewarding career opportunities on a global scale.
                     </p>
                     <h4 class="title">Comprehensive Curriculum:</h4>
                     <p class="mb-15">The ACCA IFRS course offers a comprehensive curriculum that covers a
@@ -388,7 +388,7 @@
                       <div id="accordion17" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            Enhanced technical expertise, global credibility, and lucrative career opportunities.
+                            Enhanced technical expertise, global credibility, and Rewarding career opportunities.
                           </p>
                         </div>
                       </div>
@@ -437,6 +437,18 @@
                 </div>
                 <div class="widget">
                   <div class="widget-image-carousel">
+                    <a href="./blog2.html" class="item">
+                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <h4 class="title">How does holding a CMA certification impact your sense of professional
+                        fulfillment and financial security? !</h4>
+                      <p>
+                        Career opportunities and salary for CMA holders in India and the USA are promising. CMAs enjoy
+                        Rewarding positions in management accounting, with competitive salaries reflecting their
+                        expertise and credentials.....</p>
+                    </a>
+
+
+                    
                     <!-- <a href="./blog3.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
                       <h4 class="title">Is the CMA certification still valuable in today's job market? </h4>
