--- a/blog1.html
+++ b/blog1.html
@@ -1,73 +1,46 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html dir="ltr" lang="en">
 
-<!-- blog-single-disqus-comments19:08-->
 
 <head>
-  <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education, cma, learning," />
 
-  <!-- Page Title -->
   <title>prospire | Education & Institution</title>
 
-  <!-- Favicon and Touch Icons -->
   <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
   <link href="images/apple-touch-icon.png" rel="apple-touch-icon" />
   <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
   <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
   <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
 
-  <!-- Stylesheet -->
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
   <link href="css/animate.css" rel="stylesheet" type="text/css" />
   <link href="css/css-plugin-collections.css" rel="stylesheet" />
-  <!-- CSS | menuzord megamenu skins -->
   <link id="menuzord-menu-skins" href="css/menuzord-skins/menuzord-rounded-boxed.css" rel="stylesheet" />
-  <!-- CSS | Main style file -->
   <link href="css/style-main.css" rel="stylesheet" type="text/css" />
-  <!-- CSS | Preloader Styles -->
   <link href="css/preloader.css" rel="stylesheet" type="text/css" />
-  <!-- CSS | Custom Margin Padding Collection -->
   <link href="css/custom-bootstrap-margin-padding.css" rel="stylesheet" type="text/css" />
-  <!-- CSS | Responsive media queries -->
   <link href="css/responsive.css" rel="stylesheet" type="text/css" />
-  <!-- CSS | Style css. This is the file where you can place your own custom css code. Just uncomment it and use it. -->
-  <!-- <link href="css/style.css" rel="stylesheet" type="text/css"> -->
-
-  <!-- Revolution Slider 5.x CSS settings -->
   <link href="js/revolution-slider/css/settings.css" rel="stylesheet" type="text/css" />
   <link href="js/revolution-slider/css/layers.css" rel="stylesheet" type="text/css" />
   <link href="js/revolution-slider/css/navigation.css" rel="stylesheet" type="text/css" />
 
-  <!-- CSS | Theme Color -->
   <link href="css/colors/theme-skin-color-set-1.css" rel="stylesheet" type="text/css" />
 
-  <!-- external javascripts -->
   <script src="js/jquery-2.2.4.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- JS | jquery plugin collection for this theme -->
   <script src="js/jquery-plugin-collection.js"></script>
-
-  <!-- Revolution Slider 5.x SCRIPTS -->
   <script src="js/revolution-slider/js/jquery.themepunch.tools.min.js"></script>
   <script src="js/revolution-slider/js/jquery.themepunch.revolution.min.js"></script>
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body class="">
   <div id="wrapper" class="clearfix">
-    <!-- preloader -->
     <div id="preloader">
       <div id="spinner">
         <img alt="" src="images/preloaders/5.gif">
@@ -75,7 +48,6 @@
       <div id="disable-preloader" class="btn btn-default btn-sm">Disable Preloader</div>
     </div>
 
-    <!-- Header -->
     <header id="header" class="header">
       <div class="header-top bg-theme-color-2 sm-text-center">
         <div class="container">
@@ -133,9 +105,7 @@
       </div>
     </header>
 
-    <!-- Start main-content -->
     <div class="main-content">
-      <!-- Section: Blog -->
       <section>
         <div class="container-fluid mt-30 mb-30 pt-30 pb-30">
           <div class="row">
@@ -197,7 +167,7 @@
                       mark as entrepreneurs or consultants in the accounting domain</p>
                     <h5 class="widget-title line-bottom">Global Opportunities:</h5>
                     <p class="mb-15">The accounting profession transcends geographical boundaries, offering Indian
-                      students the chance to pursue lucrative career opportunities both domestically and
+                      students the chance to pursue Rewarding career opportunities both domestically and
                       internationally. With India's growing influence in the global economy, Indian accounting
                       professionals are increasingly sought after by multinational corporations, financial institutions,
                       and consulting firms operating across the globe.</p>
@@ -313,7 +283,7 @@
                       <div id="accordion15" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
                           <p>
-                            Lucrative career prospects both domestically and internationally.
+                            Rewarding career prospects both domestically and internationally.
                           </p>
                         </div>
                       </div>
@@ -406,7 +376,7 @@
                         fulfillment and financial security? !</h4>
                       <p>
                         Career opportunities and salary for CMA holders in India and the USA are promising. CMAs enjoy
-                        lucrative positions in management accounting, with competitive salaries reflecting their
+                        Rewarding positions in management accounting, with competitive salaries reflecting their
                         expertise and credentials.....</p>
                     </a>
                     <a href="./blog3.html" class="item">
@@ -424,16 +394,12 @@
         </div>
       </section>
     </div>
-    <!-- end main-content -->
-
-    <!-- Footer -->
     <footer id="footer" class="footer bg-black-222">
       <div class="container pt-70 pb-30">
         <div class="row border-bottom-black">
           <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
-              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
                 <h6 class="widget-title mb-10">Prospire Bangalore Chapter
                 </h6>
@@ -455,10 +421,6 @@
                 <li><a href="https://www.youtube.com/@Prospireeducation"><i class="fa fa-youtube"></i></a></li>
                 <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i
                       class="fa fa-instagram"></i></a></li>
-                <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
               </ul>
             </div>
 
@@ -466,8 +428,7 @@
           <div class="col-sm-4 col-md-3">
             <div class="widget dark">
               <h5 class="widget-title mb-10">Contact Us</h5>
-              <!-- <img class="mt-10 mb-20" alt="image_not_found" src="images/mainimages/Logo_transparent.png"> -->
-              <ul class="list-inline mt-5">
+=              <ul class="list-inline mt-5">
                 <h6 class="widget-title mb-10">Prospire Kannur Chapter</h6>
 
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
@@ -488,10 +449,6 @@
                 <li><a href="https://www.youtube.com/@Prospireeducation"><i class="fa fa-youtube"></i></a></li>
                 <li><a href="https://www.instagram.com/prospire.education?igsh=dTZncWt3NHhveGY4"><i
                       class="fa fa-instagram"></i></a></li>
-                <!-- <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
               </ul>
             </div>
 
@@ -542,14 +499,7 @@
     </footer>
     <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
   </div>
-  <!-- end wrapper -->
-
-  <!-- Footer Scripts -->
-  <!-- JS | Custom script for all pages -->
   <script src="js/custom.js"></script>
 
 </body>
-
-<!-- blog-single-disqus-comments19:11-->
-
-</html>
+</html> -->
