--- a/blog4.html
+++ b/blog4.html
@@ -381,14 +381,12 @@
                         finance, technology-driven sectors, entrepreneurship, global markets, and specialized areas like
                         forensic accounting and sustainability.....</p>
                     </a> -->
-                    <a href="./blog2.html" class="item">
+                    <a href="./blog5.html" class="item">
                       <img src="https://placehold.it/365x230" alt="noimage">
-                      <h4 class="title">How does holding a CMA certification impact your sense of professional
-                        fulfillment and financial security? !</h4>
-                      <p>
-                        Career opportunities and salary for CMA holders in India and the USA are promising. CMAs enjoy
-                        lucrative positions in management accounting, with competitive salaries reflecting their
-                        expertise and credentials.....</p>
+                      <h4 class="title">Why is the BAT course considered a vital pathway for individuals aspiring to
+                        enter the finance industry? </h4>
+                      <p>The BAT course equips students with foundational knowledge, practical skills, and opportunities
+                        for career advancement, preparing them for diverse roles in accounting and finance.....</p>
                     </a>
                   </div>
                 </div>
