cource page edits

--- a/course.html
+++ b/course.html
@@ -167,13 +167,12 @@
                   <div class="thumb">
                     <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_4.jpg">
                     <div class="overlay">
-                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
+                      <a href="./cmausa.html"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">CMA USA</a></h5>
+                    <h5 class="font-16 title"><a href="./cmausa.html">CMA USA</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa-regular fa-file mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i>
                         CERTIFIED MANAGEMENT ACCOUNTANT (USA)</li>
                     </ul>
@@ -193,11 +192,11 @@
                   <div class="thumb">
                     <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_3.avif">
                     <div class="overlay">
-                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
+                      <a href="./cmaindia.html"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">
+                    <h5 class="font-16 title"><a href="./cmaindia.html">
                         CMA INDIA
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
@@ -220,7 +219,7 @@
                   <div class="thumb">
                     <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_6.jpg">
                     <div class="overlay">
-                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
+                      <a href="./enrolledagent.html"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
@@ -247,11 +246,11 @@
                   <div class="thumb">
                     <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_1.jpg">
                     <div class="overlay">
-                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
+                      <a href="./bat.html"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">
+                    <h5 class="font-16 title"><a href="./bat.html">
                         BAT
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
@@ -274,11 +273,11 @@
                   <div class="thumb">
                     <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_5.jpg">
                     <div class="overlay">
-                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
+                      <a href="./cat.html"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">
+                    <h5 class="font-16 title"><a href="./cat.html">
                         CAT
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
@@ -301,11 +300,11 @@
                   <div class="thumb">
                     <img class="img-fullwidth" alt="image_not_found" src="images/mainimages/cources_image_2.jpg">
                     <div class="overlay">
-                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
+                      <a href="./acca_ifrs.html"><i class="fa fa-calendar mr-5"></i></a>
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">
+                    <h5 class="font-16 title"><a href="./acca_ifrs.html">
                         ACCA IFRS
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
