--- a/blog1.html
+++ b/blog1.html
@@ -371,7 +371,7 @@
                         forensic accounting and sustainability.....</p>
                     </a>
                     <a href="./blog2.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/about.jpg" alt="noimage">
                       <h4 class="title">How does holding a CMA certification impact your sense of professional
                         fulfillment and financial security? !</h4>
                       <p>
