--- a/blog3.html
+++ b/blog3.html
@@ -359,7 +359,7 @@
                         forensic accounting and sustainability.....</p>
                     </a>
                     <a href="./blog2.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/about.jpg" alt="noimage">
                       <h4 class="title">How does holding a CMA certification impact your sense of professional
                         fulfillment and financial security? !</h4>
                       <p>
@@ -375,7 +375,7 @@
                         management accounting and finance.....</p>
                     </a>
                     <a href="./blog4.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/portfolio-1.jpg" alt="noimage">
                       <h4 class="title">Scope Of Enrolled Agent (EA) !</h4>
                       <p>Enrolled Agents (EAs) possess extensive expertise in tax representation and consultation,
                         authorized to represent taxpayers before the IRS. With in-depth knowledge of tax laws, EAs
