--- a/blog4.html
+++ b/blog4.html
@@ -185,10 +185,10 @@
                       in-depth knowledge and expertise in tax preparation, representation, and compliance. This
                       comprehensive curriculum ensures that Enrolled Agents are well-prepared to handle various tax
                       scenarios and provide sound advice to their clients.</p>
-                    <blockquote class="theme-colored pt-20 pb-20">
+                    <!-- <blockquote class="theme-colored pt-20 pb-20">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                       <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                    </blockquote>
+                    </blockquote> -->
                     <h4 class="title">Scope Of Enrolled Agent (EA)</h5>
 
                       <p>The scope of an Enrolled Agent (EA) is broad and multifaceted, encompassing various aspects of
@@ -384,7 +384,7 @@
                         forensic accounting and sustainability.....</p>
                     </a> -->
                     <a href="./blog5.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/blog-1.jpg" alt="noimage">
                       <h4 class="title">Why is the BAT course considered a vital pathway for individuals aspiring to
                         enter the finance industry? </h4>
                       <p>The BAT course equips students with foundational knowledge, practical skills, and opportunities
