--- a/blog5.html
+++ b/blog5.html
@@ -235,11 +235,11 @@
                                     Business Accounting Technician course instils a culture of continuous learning,
                                     empowering
                                     graduates to adapt to changing environments and thrive in their careers.</p>
-                                  <blockquote class="theme-colored pt-20 pb-20">
+                                  <!-- <blockquote class="theme-colored pt-20 pb-20">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
                                       ante.</p>
                                     <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                                  </blockquote>
+                                  </blockquote> -->
                                   <p>In conclusion, the Business Accounting Technician course offers a gateway to a
                                     diverse array of
                                     career opportunities in the dynamic field of accounting and finance. Whether you
@@ -437,7 +437,7 @@
                 <div class="widget">
                   <div class="widget-image-carousel">
                     <a href="./blog6.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/blog-2.jpg" alt="noimage">
                       <h4 class="title">Empowering Careers in Finance </h4>
                       <p>The Business Accounting Technician course equips students with fundamental accounting knowledge
                         and practical skills, paving the way for diverse opportunities in entry-level positions, career
