--- a/blog6.html
+++ b/blog6.html
@@ -236,11 +236,11 @@
                       individuals, CAT graduates can build successful entrepreneurial ventures and carve
                       out their niche in the
                       industry.</p>
-                    <blockquote class="theme-colored pt-20 pb-20">
+                    <!-- <blockquote class="theme-colored pt-20 pb-20">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
                         ante.</p>
                       <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                    </blockquote>
+                    </blockquote> -->
                     <p>In conclusion, the Certified Accounting Technician (CAT) course offers a gateway to
                       diverse and rewarding
                       career opportunities in the field of accounting. Whether you're aiming to pursue
@@ -436,7 +436,7 @@
                 <div class="widget">
                   <div class="widget-image-carousel">
                     <a href="./blog8.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/blog-3.jpg" alt="noimage">
                       <h4 class="title">Why is studying the ACCA IFRS course considered essential for finance
                         professionals looking to thrive in the global landscape of accounting?</h4>
                       <p>The ACCA IFRS course offers global recognition, a comprehensive curriculum, and versatile
