--- a/blog8.html
+++ b/blog8.html
@@ -237,10 +237,10 @@
                       staying updated with the latest developments in accounting standards and positioning themselves as
                       trusted
                       advisors in their respective fields.</p>
-                    <blockquote class="theme-colored pt-20 pb-20">
+                    <!-- <blockquote class="theme-colored pt-20 pb-20">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                       <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                    </blockquote>
+                    </blockquote> -->
                     <p class="mb-15">In conclusion, the ACCA IFRS course offers a wealth of opportunities for
                       individuals seeking to embark on
                       successful careers in accounting and finance. From global recognition and versatile career options
@@ -438,7 +438,7 @@
                 <div class="widget">
                   <div class="widget-image-carousel">
                     <a href="./blog2.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/about.jpg" alt="noimage">
                       <h4 class="title">How does holding a CMA certification impact your sense of professional
                         fulfillment and financial security? !</h4>
                       <p>
