--- a/blog.html
+++ b/blog.html
@@ -680,7 +680,7 @@
                         forensic accounting and sustainability.....</p>
                     </a> -->
                     <a href="./blog2.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/about.jpg" alt="noimage">
                       <h4 class="title">How does holding a CMA certification impact your sense of professional
                         fulfillment and financial security? !</h4>
                       <p>
@@ -696,21 +696,21 @@
                         management accounting and finance.....</p>
                     </a> -->
                     <a href="./blog4.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/portfolio-1.jpg" alt="noimage">
                       <h4 class="title">Scope Of Enrolled Agent (EA) !</h4>
                       <p>Enrolled Agents (EAs) possess extensive expertise in tax representation and consultation,
                         authorized to represent taxpayers before the IRS. With in-depth knowledge of tax laws, EAs
                         provide comprehensive tax planning and resolution services, ensuring clients' financial
                         well-being.....</p>
                     </a><a href="./blog5.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/carousel-2.jpg" alt="noimage" >
                       <h4 class="title">Why is the BAT course considered a vital pathway for individuals aspiring to
                         enter the finance industry? </h4>
                       <p>The BAT course equips students with foundational knowledge, practical skills, and opportunities
                         for career advancement, preparing them for diverse roles in accounting and finance.....</p>
                     </a>
                     <a href="./blog6.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/blog-2.jpg" alt="noimage">
                       <h4 class="title">Empowering Careers in Finance </h4>
                       <p>The Business Accounting Technician course equips students with fundamental accounting knowledge
                         and practical skills, paving the way for diverse opportunities in entry-level positions, career
@@ -725,7 +725,7 @@
                         regulations in multinational corporations.....</p>
                     </a> -->
                     <a href="./blog8.html" class="item">
-                      <img src="https://placehold.it/365x230" alt="noimage">
+                      <img src="./img/blog-3.jpg" alt="noimage">
                       <h4 class="title">Why is studying the ACCA IFRS course considered essential for finance
                         professionals looking to thrive in the global landscape of accounting?</h4>
                       <p>The ACCA IFRS course offers global recognition, a comprehensive curriculum, and versatile
