add another image in blog

--- a/blog.html
+++ b/blog.html
@@ -582,6 +582,7 @@
                         <div class="clearfix"></div>
                       </div>
                     </article>
+                    <img src="./images/bg/bg1.jpg" alt="image_not_found" />
 
                     <article class="post clearfix pb-30">
                       <div class="clearfix"></div>
