--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:image" content="https://example.com/image.jpg">
   <meta property="og:url" content="https://prospireeducation.in">
   <!-- Page Title -->
-  <title>prospire Education & Institution</title>
+  <title>Prospire Education & Institution</title>
 
 
   <!-- Favicon and Touch Icons -->
