--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <!-- LAYERS -->
 
                 <!-- LAYER NR. 1 -->
-                <div class="tp-caption tp-resizeme text-uppercase text-white font-raleway" id="rs-1-layer-1"
+                <h1 class="tp-caption tp-resizeme text-uppercase text-white font-raleway" id="rs-1-layer-1"
                   data-x="['left']" data-hoffset="['30']" data-y="['middle']" data-voffset="['-110']"
                   data-fontsize="['100']" data-lineheight="['110']" data-width="none" data-height="none"
                   data-whitespace="nowrap" data-transform_idle="o:1;s:500"
@@ -172,7 +172,7 @@
                   data-splitout="none" data-responsive_offset="on"
                   style="z-index: 7; white-space: nowrap; font-weight: 700">
                   prospire
-                </div>
+                </h1>
 
                 <!-- LAYER NR. 2 -->
                 <div
