blog des ,key w,can

--- a/blog6.html
+++ b/blog6.html
@@ -6,12 +6,22 @@
 <head>
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  
+  <meta http-equiv="content-type" content="application/xml; charset=UTF-8" />
+  
   <meta name="description" content="prospire | Education & Institution" />
-  <meta name="keywords" content="academy, course, education, education, cma, learning," />
+  <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
 
+  <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
+  <meta property="og:title" content="prospire education">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://example.com/image.jpg">
+  <meta property="og:url" content="https://prospireeducation.in/blog6.html">
   <!-- Page Title -->
   <title>prospire | Education & Institution</title>
+
+  <!-- Favicon and Touch Icons -->
+  <link rel="canonical" href="https://prospireeducation.in/blog6.html">
 
   <!-- Favicon and Touch Icons -->
   <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
